公证处坐标处理
