# app/Http/Requests/Api/MessageRequest.php
@@ -13,8 +13,8 @@ class MessageRequest extends FormRequest
     public function rules()
     {
         return [
-            'username' => ['max:12'],
-            'mobile'   => ['sometimes', 'required', 'regex:/^1[345789][0-9]{9}$/'],
+            'username' => ['max:10', 'min:2'],
+            'mobile'   => ['sometimes', 'required', 'regex:/^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(17[0,3,5-8])|(18[0-9])|166|198|199|(147))\\d{8}$/'],
             'content'  => ['required', 'min:10'],
         ];
     }
